--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src=""></script>
 <body>
 
-<img src="https://images.unsplash.com/photo-1670189577367-2c6ef31a4b8c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80" alt="image-example" style="width:960px; height:100px;">
+<img src="https://images.unsplash.com/photo-1670189577367-2c6ef31a4b8c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80" alt="image-example" style="width:960px">
 
 <div class="">
  <h1>This is a Heading</h1>
